	PR tree-optimization/60023 	* tree-if-conv.c (predicate_mem_writes): Pass true instead of 	false to gsi_replace. 	* tree-vect-stmts.c (vect_finish_stmt_generation): If stmt 	has been in some EH region and vec_stmt could throw, add 	vec_stmt into the same EH region. 	* tree-data-ref.c (get_references_in_stmt): If IFN_MASK_LOAD 	has no lhs, ignore it. 	* internal-fn.c (expand_MASK_LOAD): Likewise.

* g++.dg/vect/pr60023.cc: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@207464 138bc75d-0d04-0410-961f-82ee72b054a4